<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".PengantarActivity"
            android:id="@+id/ScrollViewPengantar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.widget.RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                tools:context=".PengantarActivity">

            <TextView
                    android:id="@+id/textJudulPengantar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/judulpengantar"
                    android:layout_marginTop="80dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="32sp"
                    android:textStyle="bold"/>
            <ImageView
                    android:id="@+id/imgLogoPengantar"
                    android:src="@drawable/kanabisawide"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textJudulPengantar"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/logopengantar"/>
            <TextView
                    android:id="@+id/textAwalPengantar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgLogoPengantar"
                    android:text="@string/awalpengantar"
                    android:textSize="20sp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="serif"/>
            <TextView
                    android:id="@+id/textJudulHiragana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textAwalPengantar"
                    android:text="@string/judulhiragana"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"/>
            <ImageView
                    android:id="@+id/imgLogoHiragana"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_below="@id/textJudulHiragana"
                    android:src="@drawable/hiragana"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/logohiragana"/>
            <TextView
                    android:id="@+id/textPengantarHiragana1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgLogoHiragana"
                    android:text="@string/tekshiragana1"
                    android:textSize="20sp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="serif"/>
            <TextView
                    android:id="@+id/textPengantarHiragana2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPengantarHiragana1"
                    android:text="@string/tekshiragana2"
                    android:textSize="20sp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="serif"/>
            <TextView
                    android:id="@+id/textJudulKatakana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPengantarHiragana2"
                    android:text="@string/judulkatakana"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"/>
            <ImageView
                    android:id="@+id/imgLogoKatakana"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_below="@id/textJudulKatakana"
                    android:src="@drawable/katakana"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/logokatakana"/>
            <TextView
                    android:id="@+id/textPengantarKatakana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgLogoKatakana"
                    android:text="@string/tekskatakana"
                    android:textSize="20sp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="serif"/>
            <TextView
                    android:id="@+id/textJudulFitur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPengantarKatakana"
                    android:text="@string/judulfitur"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"/>
            <TextView
                    android:id="@+id/textPengantarFitur1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textJudulFitur"
                    android:text="@string/teksfitur1"
                    android:textSize="20sp"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="serif"/>
            <TextView
                    android:id="@+id/textPengantarFitur2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textPengantarFitur1"
                    android:text="@string/teksfitur2"
                    android:textSize="20sp"
                    android:textAlignment="viewStart"
                    android:layout_margin="20dp"
                    android:fontFamily="serif"/>
        </android.widget.RelativeLayout>

    </ScrollView>

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"
            app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>